ウィンドウサイズに合わせて伸び縮みするように

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <title>jquery.boxRaing.js</title>
+<style>
+* {
+	margin: 0;
+}
+</style>
 
 </head>
 <body>
-<canvas width="1000" height="2000"></canvas>
+<canvas width="1000" height="3000"></canvas>
 
 <script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
 <script type="text/javascript" src="js/jquery.boxRain.js"></script>
