ひし形を追加

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-<canvas width="1000" height="3000"></canvas>
+<canvas width="1000" height="15000" id="canvas"></canvas>
 
 <script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
 <script type="text/javascript" src="js/jquery.boxRain.js"></script>
